<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Song Of The Day</string>
    <string name="not_found">Nothing was found</string>   
    <string name="downloading_started">Song of the day is downloading&#8230;</string>
    <string name="toast_add">Song has been added!</string>
    <string name="toast_no_vk_account">vk.com account required</string>
    <string name="song_playing">Song of the day is playing</string>
    <string name="error_dialog_title">Error</string>

    <!-- VkAuth -->
    <string name="network_unavailable_dialog_message">Check network settings</string>

    <!-- Content description -->
    <string name="desc_preference">Settings</string>
    <string name="desc_play_stop">Play/Stop</string>
    <string name="desc_update">Update</string>
    <string name="desc_add">Add</string>
    <string name="desc_divider">Divider</string>
    <string name="desc_info">Widget Info</string>
    <string name="desc_download_icon">Download icon</string>
    <string name="desc_stop_playing">Stop playback</string>

    <!-- Preferences -->
    <string name="key_network_type">network_key</string>
    <string name="title_network_type">Network Type</string>
    <string name="summary_network_type">Required network connectivity required to download the song</string>
    <string name="network_wifi">Wi-Fi</string>
    <string name="network_any">Any</string>
    <string name="wifi_value">0</string>
    <string name="any_value">1</string>
    <string name="key_time">time_key</string>
    <string name="title_time">Update time</string>
    <string name="summary_time">Choose update time</string>
    <string name="key_update_token">update_token_key</string>
    <string name="title_update_token">Update token</string>
    <string name="title_add_account">Add VK account</string>
    <string name="key_add_account">add_account_key</string>

    <!-- WidgetUpdateInfoActivity -->
    <string name="original_title">Original title:</string>
    <string name="original_artist">Original artist:</string>

    <!-- VkAuthActivity -->
    <string name="skip">Skip</string>

    <!-- LastFM errors -->
    <string name="last_fm_tag">Last.fm</string>
    <string name="invalid_service">This service does not exist</string>
    <string name="invalid_method">No method with that name in this package</string>
    <string name="last_fm_authentication_failed">You do not have permissions to access the service</string>
    <string name="invalid_format">This service doesn\'t exist in that format</string>
    <string name="invalid_parameters">Your request is missing a required parameter</string>
    <string name="invalid_resource">Invalid resource specified</string>
    <string name="operation_failed">Something else went wrong</string>
    <string name="invalid_session_key">Please re-authenticate</string>
    <string name="invalid_api_key">You must be granted a valid key by last.fm</string>
    <string name="service_offline">This service is temporarily offline. Try again later.</string>
    <string name="invalid_method_signature">Invalid method signature supplied</string>
    <string name="temporary_error">There was a temporary error processing your request. Please try again</string>
    <string name="suspended_api_key">Access for your account has been suspended, please contact Last.fm</string>
    <string name="rate_limit_exceeded">Your IP has made too many requests in a short period</string>

    <!-- VK errors -->
    <string name="vk_tag">VK</string>
    <string name="unknown_error">Unknown error occurred</string>
    <string name="application_disabled">Application is disabled. Enable your application or use test mode</string>
    <string name="incorrect_signature">Incorrect signature</string>
    <string name="authorization_failed">User authorization failed</string>
    <string name="too_many_requests">Too many requests per second</string>
    <string name="parameter_missing">One of the parameters specified was missing or invalid</string>
    <string name="access_denied">Access denied</string>

    <!-- Other errors -->
    <string name="exception">Terrible thing happened</string>
    <string name="authentication_failed">Authentication failed!</string>
    <string name="network_unavailable">Network unavailable</string>
    <string name="sdcard_busy_title">SD card unavailable</string>
    <string name="sdcard_busy_title_nosdcard">USB storage unavailable</string>
    <string name="sdcard_missing_title">No SD card</string>
    <string name="sdcard_missing_title_nosdcard">No USB storage</string>
    <string name="toast_error">Some error occurs!</string>
    <string name="authorization_failed_title">VK authorization failed</string>
    <string name="update_token">Update token in settings</string>

</resources>