<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <ListPreference
        android:defaultValue="@string/any_value"
        android:entries="@array/connectivity_entries"
        android:entryValues="@array/connectivity_values"
        android:key="@string/key_network_type"
        android:summary="@string/summary_network_type"
        android:title="@string/title_network_type" />

    <ru.vang.songoftheday.preference.TimePreference
        android:key="@string/key_time"
        android:summary="@string/summary_time"
        android:title="@string/title_time" />

    <PreferenceScreen
        android:enabled="false"
        android:title="@string/title_update_token"
        android:key="@string/key_update_token" >
    </PreferenceScreen>

</PreferenceScreen>