<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/widget_margin" >

    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="#AAFFFFFF"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/preference"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/image_button_states"
            android:contentDescription="@string/desc_preference"
            android:src="@drawable/ic_preferences" />

        <ImageButton
            android:id="@+id/play"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/image_button_states"
            android:contentDescription="@string/desc_play_stop"
            android:src="@drawable/ic_play" />

        <ImageButton
            android:id="@+id/update"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/image_button_states"
            android:contentDescription="@string/desc_update"
            android:src="@drawable/ic_refresh" />

        <ImageButton
            android:id="@+id/add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/image_button_states"
            android:contentDescription="@string/desc_add"
            android:src="@drawable/ic_add" />
    </LinearLayout>

    <ImageView
        android:id="@+id/divider_top"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/buttons_container"
        android:background="@color/divider"
        android:contentDescription="@string/desc_divider" />

    <LinearLayout
        android:id="@+id/details_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/divider_bottom"
        android:layout_below="@id/divider_top"
        android:background="@color/content_background"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:textAppearance="@android:style/TextAppearance.Large.Inverse"
            android:textColor="@color/content_primary"
            android:textIsSelectable="false"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@android:style/TextAppearance.Medium.Inverse"
            android:textColor="@color/content_secondary"
            android:textIsSelectable="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/progressbar_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/divider_bottom"
        android:layout_below="@id/divider_top"
        android:background="@color/content_background"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleInverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </LinearLayout>

    <ImageView
        android:id="@id/divider_bottom"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_alignParentBottom="true"
        android:background="@color/divider"
        android:contentDescription="@string/desc_divider" />

    <ImageView
        android:id="@+id/widget_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_details"
        android:contentDescription="@string/desc_info" />

</RelativeLayout>